2008-12-15  Daniel Elstner  <danielk@openismus.com>

	* docs/tutorial/clutter-tut.xml: Remove references to
	BehaviourBspline, as its functionality was merged into
	BehaviourPath.

2008-12-15  Daniel Elstner  <danielk@openismus.com>

	* docs/tutorial/README: Fix copy'n'paste mistakes.

2008-12-15  Daniel Elstner  <danielk@openismus.com>

	* configure.ac: Remove some cruft.

2008-11-06  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Correct the version number in the 
	debian package name. Thanks to Derek Kraan.

2008-08-11  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/Makefile.am: Use the xhtml docbook xsl instead of html. 
	* docs/tutorial/clutter-tut.xml: Mention 0.8 instead of 0.7.
	* configure.ac: Depend on the -0.8 versions instead of 0.7.

2008-06-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/Makefile.am: Add use.id.as.filename to the xsltproc call, 
	so our filenames do not change when adding chapters in future.
	* docs/tutorial/clutter-tut.xml: Added one missing ID.

2008-06-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Added a Header Files And Linking section.
	Stage: For both examples, give the gcc command, with the pkg-config call, 
	and refer to the new chapter. 

2008-06-15  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Removed the mention of the single-stage 
	limitation because this was fixed in 0.7/0.8.

2008-06-15  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Hopefully made the explanation of 
	layout modes a little clearer.

2008-06-14  Jan Arne Petersen  <jpetersen@openismus.com>

	* docs/tutorial/clutter-tut.xml: Rewrite some text regarding the new
	layout system introduced in clutter 0.7.

	* examples/custom_container/examplebox.c (example_box_remove,
	  example_box_pack): Call clutter_actor_queue_relayout instead of the
	custom layout function.
	  (example_box_get_preferred_width,